tests/fixtures/invalid/unclosed-brace.wgsl
// Unclosed brace
fn test() {
    var x: f32 = 1.0;
    if (x > 0) {
        return;
    // Missing closing brace
}
